[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk-osint-nexus"
version = "0.1.0"
description = "A unified UK OSINT tool leveraging free government APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "UK OSINT Nexus Contributors" }
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "asyncio>=3.4.3",
    "aiosqlite>=0.20.0",
    "python-dateutil>=2.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
osint = "uk_osint_nexus.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/uk_osint_nexus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
